added actual video url and email address

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,8 +26,8 @@
             <div class="col-lg border-right border-dark col-12">
                 <h5>CONTACT</h5>
                 <ul class="list-unstyled">
-                    <li class="my-1"><i class="la la-envelope"></i> lockecorp@gmail.com</li>
-                    <li class="my-1"><i class="la la-comment"></i> Contact form</li>
+                    <li class="my-1"><i class="la la-envelope"></i> corplocke@gmail.com</li>
+                    <li class="my-1 pointer" [routerLink]="'/contact'" ><i class="la la-comment"></i> Contact form</li>
                 </ul>
             </div>
         </div>
