--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,19 +11,19 @@
             <p class="text-center font-size-28 px-3 py-0 caligraphy">
                 Every dawn begins with me,
                 <br>
-                At dusk I'll be the first you see,
+                At <span [class.glitch]="!!config.config$.getValue()?.hint1" data-text="d">d</span>usk I'll be the first you see,
                 <br>
-                And daybreak couldn't come without
+                And <span [class.glitch]="!!config.config$.getValue()?.hint1" data-text="d">d</span>aybreak couldn't come without
                 <br>
-                What midday centers all about.
+                What mi<span [class.glitch]="!!config.config$.getValue()?.hint1" data-text="dd">dd</span>ay centers all about.
                 <br>
-                Daisies grow from me, I'm told
+                <span [class.glitch]="!!config.config$.getValue()?.hint1" data-text="D">D</span>aisies grow from me, I'm told
                 <br>
-                And when I come, I end all cold,
+                And when I come, I end all col<span [class.glitch]="!!config.config$.getValue()?.hint1" data-text="d">d</span>,
                 <br>
                 But in the sun I won't be found,
                 <br>
-                Yet still, each day I'll be around.
+                Yet still, each <span [class.glitch]="!!config.config$.getValue()?.hint1" data-text="d">d</span>ay I'll be around.
                 <br>
                 <span class="divider text-white py-5"><i class="la la-pagelines"></i></span>
             </p>
