--- a/src/app/pages/riddles/sofia/dawn.component.html
+++ b/src/app/pages/riddles/sofia/dawn.component.html
@@ -5,10 +5,10 @@
             <h3 class="text-center divider text-white"><i class="la la-pagelines"></i></h3>
         </div>
         <div class="col-12 text-center">
-            <iframe width="80%" height="500px" frameborder="0" allowfullscreen [src]="videoUrl"></iframe>
+            <iframe width="80%" height="500px" allowfullscreen [src]="videoUrl"></iframe>
         </div>
         <div class="col-12">
-            <h3 class="text-center divider text-white caligraphy">Wisdom of the senses</h3>
+            <h3 class="text-center divider text-white caligraphy">Trust your senses</h3>
         </div>
     </div>
 </div>
